# arachna

./: .arachna.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  TODO.md  arachna.1  pyproject.toml  requirements-dev.txt  sonar-project.properties
.github/workflows/: benchmark.yml  docs.yml  sonar.yml  test.yml
api/: arachna.html  search.js
api/arachna/: api_types.html  cli.html  collect_api.html  collector.html  config.html  differ_structural.html  domain.html  formatter.html  gatherer.html  gitignore.html  hook.html  init.html  interfaces.html  plugins.html  presets.html  profiler.html  renderer.html  runner.html  snapshot.html  splitter.html  store.html  tokenizer.html  validator.html  watch.html  watcher.html
docs/: ARCHITECTURE.md  BENCHMARKS.md  LLM_INTEGRATION.md  SECURITY.md  TUTORIAL.md
docs/adr/: 001-plugin-testing-strategy.md  002-cli-redesign.md  003-language-sets.md  004-repo-map-pipeline.md  005-two-level-command-allowlist.md  006-snapshot-id-validation.md  007-tokenizer-top-level-validation.md  008-store-root-parameter.md  009-watcher-decomposition.md  010-multi-part-diff-header.md  011-no-backward-compat.md  012-zero-dep-fixes.md  013-plugin-system.md  014-business-model.md  015-backlog-frozen.md
docs/api/: arachna.html  index.html  search.js
examples/: delirium_agent.py
llm_docs/: AUDIT_REPORT.md  TODO.md
src/arachna/: __init__.py  __main__.py  api_errors.py  api_types.py  cache.py  cli_watch.py  collect_api.py  collector.py  completion.py  compressor.py  config.py  differ.py  differ_structural.py  doctor.py  formatter.py  gatherer.py  gitignore.py  hook.py  init.py  interfaces.py  plugins.py  presets.py  profiler.py  renderer.py  runner.py  splitter.py  store.py  store_errors.py  tokenizer.py  validator.py  watch.py  watcher.py
tests/: conftest.py  test_api_watch.py  test_collect_api.py  test_config.py  test_formatter.py  test_gatherer.py  test_gitignore.py  test_language_sets_consistency.py  test_renderer.py  test_runner.py  test_splitter.py  test_tokenizer.py  test_validator.py
tests/api/: conftest.py  test_api_snapshot.py  test_collect_api.py  test_collect_api_write_to_disk.py  test_collect_result_metrics.py  test_snapshot_api.py
tests/benchmark/: baseline.json  conftest.py  test_benchmark.py  test_parallel_vs_sequential.py  test_performance.py  test_stress.py  test_structural_diff.py  test_structural_diff_bench.py
tests/cache/: test_cache.py  test_cache_edge.py  test_cache_more.py  test_cache_sha256_fallback.py
tests/cli/: conftest.py  test_clean.py  test_cli_snapshot_coverage.py  test_cli_snapshot_handlers.py  test_cli_watch_coverage.py  test_cli_watch_handlers.py  test_collect_repo.py  test_collect_skip_clean.py  test_completion_edge.py  test_completion_handler.py  test_diff_handlers.py  test_format_cli.py  test_format_line.py  test_init_dispatch_defaults.py  test_init_handlers.py  test_init_interactive.py  test_list.py  test_main_argparse.py  test_main_collect.py  test_main_coverage.py  test_main_diff_all.py  test_main_dispatch.py  test_main_dispatch_wrappers.py  test_main_dry_run.py  test_main_error_paths.py  test_main_handlers.py  test_manifest.py  test_parse_output_dir.py  test_plugins.py  test_plugins_empty.py  test_plugins_handlers.py  test_presets_broken_file.py  test_presets_update_url_validation.py  test_profile.py  test_profile_errors.py  test_snapshot_dispatch_unknown.py  test_snapshot_handlers.py  test_snapshot_info_modes.py  test_store_dispatch.py  test_store_handlers.py  (+1 more)
tests/collector/: test_collect.py  test_collect_api.py  test_collect_api_write_to_disk.py  test_collect_result_metrics.py  test_collector_coverage.py  test_diff_part_header.py  test_merge_lock.py  test_metrics.py  test_metrics_edge_cases.py  test_toc_formats.py  test_unlimited_tokens.py  test_write_diff_parts.py
tests/completion/: test_completion.py
tests/compressor/: test_compress.py
tests/config/: conftest.py  test_completion.py  test_completion_main.py  test_config_extends.py  test_config_extends_warning.py  test_doctor.py  test_fetch_presets_timeout.py  test_find_config.py  test_find_config_cached.py  test_get_detected_summary.py  test_get_profile.py  test_init.py  test_init_preset_param.py  test_install_hook.py  test_install_hook_errors.py  test_load_config.py  test_presets.py  test_presets_detect.py  test_presets_fetch_merge.py  test_presets_languages.py  test_presets_update_root.py  test_profiler_edge.py  test_validate_preset.py  test_validate_profile.py
tests/differ/: test_differ.py  test_differ_xml.py  test_format_added_tokenizer.py  test_fuzz_re_c_like_block.py  test_fuzz_re_c_like_import.py  test_run_with_timeout.py  test_structural_diff.py  test_structural_diff_c_like_braces.py  test_structural_diff_extra.py  test_tree_sitter_fallback.py
tests/doctor/: test_doctor.py  test_doctor_errors.py
tests/domain/: conftest.py  test_atomic_write.py  test_audit_log_errors.py  test_binary.py  test_binary_decision_table.py  test_binary_labels.py  test_binary_more.py  test_binary_search_tokenizer.py  test_build_parts.py  test_cache.py  test_cache_edge.py  test_cache_file_hash_large.py  test_cache_os_error_handling.py  test_cache_save_failure.py  test_collect.py  test_collect_api.py  test_collect_api_write_to_disk.py  test_collect_result_metrics.py  test_collect_sections.py  test_collector_coverage.py  test_collector_merge.py  test_command_mode_compress.py  test_command_substitution.py  (+103 more)
(+546 files in other folders)
