[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arachna"
version = "1.0.2"
description = "Context collector for AI — gathers project files into token-limited chunks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Artem Terenin"}
]
keywords = ["ai", "context", "tokenizer", "code-collector", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/dead-duke/arachna"
Repository = "https://github.com/dead-duke/arachna"
Issues = "https://github.com/dead-duke/arachna/issues"
Changelog = "https://github.com/dead-duke/arachna/blob/main/CHANGELOG.md"

[project.scripts]
arachna = "arachna.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
