[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arachna"
version = "4.2.0"
description = "Context collector for AI — gathers project files into token-limited chunks"
readme = "README.md"
license = "AGPL-3.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    {name = "Artem Terenin"}
]
keywords = ["ai", "context", "tokenizer", "code-collector", "llm", "diff", "snapshot", "agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/dead-duke/arachna"
Repository = "https://github.com/dead-duke/arachna"
Issues = "https://github.com/dead-duke/arachna/issues"
Changelog = "https://github.com/dead-duke/arachna/blob/main/CHANGELOG.md"

[project.scripts]
arachna = "arachna.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/man/man1" = ["arachna.1"]

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5.0"]
transformers = ["transformers>=4.40.0"]
tree-sitter = [
    "tree-sitter~=0.21.0",
    "tree-sitter-python~=0.21.0",
    "tree-sitter-javascript~=0.21.0",
    "tree-sitter-typescript~=0.21.0",
    "tree-sitter-go~=0.21.0",
]
javascript = ["arachna[tree-sitter]"]
typescript = ["arachna[tree-sitter]"]
go = ["arachna[tree-sitter]"]
all = ["arachna[tree-sitter,tiktoken,transformers]"]
dev = ["pytest", "pytest-cov", "ruff", "pre-commit", "hypothesis", "psutil>=5.9.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
